Fix spacing issue in "style.css"

--- a/web_ui/static/css/style.css
+++ b/web_ui/static/css/style.css
@@ -67,7 +67,7 @@ h2{
 }
 
 /* Styles for the file inout fields */
-input[type = "text"]{
+input[type = "file"]{
     width: 100%;
     margin-bottom: 1rem;
 }
